--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 
 {% include header.html %}
-<section class="stage">
+<section class="c-stage">
   <div class="inner inner--tb">
     {{ content }}
   </div>
