--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: compress
 ---
 {% include header.html %}
-<section class="stage">
+<section class="c-stage">
   <div class="inner">
   {{ content }}
   </div>
