--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,7 +10,8 @@ layout: compress
             {% assign tags_max = tag[1].size %}
         {% endif %}
     {% endfor %}
-<section class="stage">
+<section class="c-stage">
+  <div class="inner">
 {% for i in (1..tags_max) reversed %}
     {% for tag in site.tags %}
         {% if tag[1].size == i %}
@@ -26,5 +27,6 @@ layout: compress
         {% endif %}
     {% endfor %}
 {% endfor %}
+  </div>
 </section>
 {% include footer.html %}
