--- a/src/sass/modules/_article.scss
+++ b/src/sass/modules/_article.scss
@@ -1,75 +1,77 @@
-.article {
-    margin: 0 auto 2.5em auto;
-    
-    img {
-      max-width: 100%;
-    }
-
-    h2 {
-      border-bottom: 1px solid $color--contrast; 
-    }
+.c-article__single {
+  p, h1,h2,h3 {
+    margin: 1rem 0;
+  }
 }
 
-.article--home {
-    border-bottom: 1px solid #ddd;
-    padding: 0 2rem 2rem 2rem; 
-}
-
-p code {
-  background: #cfd8dc;
-  padding: .125em .5em;
+p > code {
+  color: #E91E63;
+  background-color: #f1f1f1;
+  padding: .125rem .75rem;
   border-radius: 3px;
 }
 
-.article ul {
-  margin-left: 2.5em;
+.highlight {
+  background: #454545;
+  color: #f1f1f1;
+  margin: 1rem 0;
 }
 
-.article__footer {
-  padding: 0 20px;
-}
-
-.feedback {
-    background: #eee;
-    padding: 2em;
-    margin-top: 2em;
-    border-left: .25em solid $color--main;
-}
-
-.article__list {
-  margin: 1em;
-}
-
-.category {
-   padding: 0 1.25rem;
-   display: inline-block;
-   margin-left: 1.25rem; 
-    &.coding {
-      color: #fff;
-      background: $color--contrast;  
-    }
-
-}
-
-
-blockquote {
+pre {
   display: block;
-  font-style: italic;
-  font-size: 1.2rem;
-  background: #E0E0E0;
-  color: #616161;
-  padding: 1rem 2rem;
-  margin: 1rem 0 2rem 0;  
+  padding: 1rem;
+  overflow: auto;
 }
-
-
 
 
 /*
- * Snippets
+ * Prev / Next
  */
+.flex {
+  display: flex;
+    @include breakpoint("medium", "and down") {
+      flex-direction: column;
+    }
+}
 
-.snippet--list {
-  padding: 1.75rem 2rem 1rem 2rem;
-  border-top: 1px solid #ddd;
+.flex-child {
+  width: 100%;
+}
+
+.post-prev, .post-next {
+  padding: 2rem 3rem;
+  background: #f1f1f1;
+  position: relative;
+  overflow: hidden;
+
+  a {
+    text-shadow: none;
+  }
+}
+
+.post-next, .post-prev {
+  svg {
+    position: absolute;
+    top: .75em;
+    fill: #E91E63;
+  }
+}
+
+.post-next {
+  text-align: right;
+}
+
+.post-next svg {
+  transform: rotate(90deg) scale(4);
+  right: 0.75em;
+}
+
+.post-prev svg {
+  transform: rotate(-90deg) scale(4);
+  left: 0.75em;
+}
+
+.c-article__footer {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
