Generic adjustments and fixes
This commit adds some "generic" fixes and new styles. It's part of a smaller
optimization.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,4 +50,8 @@ layout: compress
 </script>
 {% endif %}
 
+<section class="m-banner--small">
+  {% include campaign.html %}
+</section>
+
 {% include footer.html %}
