Viva la Bug Industries!
This commit adds the campaign teasers for our current Kickstarter Campaign! <3
<3 <3

--- a/_includes/campaign_small.html
+++ b/_includes/campaign_small.html
@@ -4,6 +4,6 @@
   </div>
 
   <div class="bug">
-    {% include campaign/bug_henchman.html %}
+    {% include campaign/bug_thug.html %}
   </div>
 </div>
