--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@ window.onload = downloadJSOnload;
 
 <script type="text/javascript">
 WebFontConfig = {
-  google: { families: [ 'Droid+Serif::latin' ] }
+  google: { families: [ 'Droid+Sans::latin' ] }
 };
 (function() {
  var wf = document.createElement('script');
