--- a/_includes/header.html
+++ b/_includes/header.html
@@ -117,4 +117,7 @@ Array.prototype.random = function() {
 </script>
 </header>
 
-{% include campaign.html %}
+{% if page.id %}
+{% else %}
+  {% include campaign.html %}
+{% endif %}
