--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ layout: compress
 {% endif %}
 
 <section class="m-banner--small">
-  {% include campaign.html %}
+  {% include campaign_small.html %}
 </section>
 
 {% include footer.html %}
