Fixed a little thingy with the nav

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -52,7 +52,7 @@
   }
   .main__navigation ul {
     width: 200%;
-    overflow: scroll;
+    overflow: auto;
     padding: 1rem 0;
     text-align: left;
   }
