Replace SVG with optimized SVG

--- a/_includes/campaign_small.html
+++ b/_includes/campaign_small.html
@@ -1,6 +1,7 @@
-<div class="m-banner c-stage">
+<div class="m-banner m-banner--small c-stage">
   <div class="inner">
       {% include campaign/text.html %}
+  <p>See that little bug over there? Animate it on CodePen to help us achive our campaign goals so the game can be even more awesome! Check out <a href="http://codepen.io/collection/neYrdm/">the SVG Bugs on CodePen</a> or read more on our <a href="https://www.kickstarter.com/projects/timpietrusky/bug-industries-a-card-dice-game-for-us-it-nerds">Kickstarter Page</a>!</p>
   </div>
 
   <div class="bug">
