--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,7 @@
 <div class="inner">
 {% if page.title == 'Home' %}
   <div class="c-avatar">
-    <img src="https://www.gravatar.com/avatar/6d391d8c3a528122f3f6c991821350ac?s=150" alt="Kevin Gimbel and Freddie Mercury, at Madame Tussauds , Amsterdam" class="c-avatar__image" />
+    <img src="https://www.gravatar.com/avatar/6d391d8c3a528122f3f6c991821350ac?s=150" alt="Kevin Gimbel and Freddie Mercury, at Madame Tussauds , Amsterdam" class="c-avatar__image" onerror="this.parentNode.setAttribute('class', 'c-avatar c-avatar__error')"/>
   </div>
 
   <p class="c-header__intro">
