[PROJECTS] Add project; Update UI/viewSwitcher

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 @import "components/stage";
 @import "components/header";
 @import "components/footer";
+@import "components/navigation";
 
 @import "modules/article";
 @import "modules/banner";
