[a11y] Add microdata and aria
This commit is a first attempt to make my site more accessible. It adds
microdata from http://schema.org for posts and author data and aria attributes
for the archive view.

I'll have to read more on a11y. :)

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,21 +1,18 @@
-<div class="inner">
+
 {% if page.title == 'Home' %}
+<div class="inner" itemscope itemtype="http://schema.org/Person">
   <div class="c-avatar">
-    <img src="https://www.gravatar.com/avatar/6d391d8c3a528122f3f6c991821350ac?s=150" alt="Kevin Gimbel and Freddie Mercury, at Madame Tussauds , Amsterdam" class="c-avatar__image" onerror="this.parentNode.setAttribute('class', 'c-avatar c-avatar__error')"/>
+    <img src="https://www.gravatar.com/avatar/6d391d8c3a528122f3f6c991821350ac?s=150" alt="Kevin Gimbel and Freddie Mercury, at Madame Tussauds , Amsterdam" class="c-avatar__image" onerror="this.parentNode.setAttribute('class', 'c-avatar c-avatar__error')" itemprop="image"/>
   </div>
 
   <p class="c-header__intro">
-    Hi there, I'm <a href="https://twitter.com/_kevinatari">Kevin Gimbel</a>
-    <br>Developer at <a href="http://synoa.de" title="Magento Agentur für B2B-Online-Shops - Synoa GmbH">Synoa GmbH</a>
+    Hi there, I'm <a href="https://twitter.com/_kevinatari" itemprop="name" title="Follow me on Twitter">Kevin Gimbel</a>
+    <br><span itemprop="jobTitle">Developer</a> at <a href="http://synoa.de" title="Synoa GmbH - Magento Agentur for B2B-Online-Shops">Synoa GmbH</a>
   </p>
-
-{% else %}
-<div class="inner--small">
-  <h1 class="c-header__headline">{{ page.title }}</h1>
-    {% if page.date %}
-      <time class="time">
-        {{ page.date | date_to_string }}
-      </time>
-    {% endif %}
-{% endif %}
 </div>
+
+{% elsif page.layout != 'post' %}
+<div class="inner">
+  <h1 class="c-header__headline">{{ page.title }}</h1>
+</div>
+{% endif %}
