--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -8,17 +8,30 @@ layout: compress
     {{ content }}
   </div>
     {% for post in site.posts  %}
-  		<article class="inner">
-  			<h3 class="article--headline" data-article-id="{{ post.id }}"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h3>
-  				{{ post.excerpt }}
-  			<p><a href="{{ post.url }}" title="Read more">Read more &rarr; </a></p>
-  				{% if post.tags %}
-  					<div class="article__tags article__footer">
-  						{% for tag in post.tags %}
-  							<span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
-  						{% endfor %}
-  					</div>
-  				{% endif %}
+  		<article class="inner" aria-describedby="excerpt-{{ forloop.index }}" aria-labeldby="heading-{{ forloop.index }}"  itemscope itemtype="http://schema.org/BlogPosting" role="article">
+  			<h2 class="article--headline" id="heading-{{ forloop.index }}">
+          <a href="{{ post.url }}" title="Read '{{ post.title }}'" rel="bookmark">{{ post.title }}</a>
+        </h2>
+        <div class="article__body">
+          <p id="excerpt-{{ forloop.index }}">{{ post.excerpt }}</p>
+  			  <p><a href="{{ post.url }}" title="Read all about {{ post.title }}">Read more <span aria-hidden="true">&rarr;</span></a></p>
+        </div>
+
+
+  				<footer class="article__tags article__footer" role="contentinfo">
+            <span>Published </span><time itemprop="datePublished" datetime="{{ post.date | date: "%F" }}">{{ post.date | date: "%D" }}</time>
+            {% if post.category %}
+            <span>in</span> <span articleSection="{{post.category}}">{{ post.category }}</span>
+            {% endif %}
+
+            {% if post.tags %}
+            <p class="off">Tagged with:
+        		  {% for tag in post.tags %}
+  						  <span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
+  					  {% endfor %}
+              </p>
+            {% endif %}
+  				</footer>
   		</article>
   	{% endfor %}
 </section>
